profilelist1exp/unpackaged/objects/Channel_Greenfield__c.object
<CustomObject>
    <description>CR 13389</description>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Created for CR13389</description>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR13389</description>
        <label>Deal ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Channel Greenfield</relationshipLabel>
        <relationshipName>Channel_Greenfield</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_user_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR13389</description>
        <label>End-user Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Greenfield (End-user Account)</relationshipLabel>
        <relationshipName>Channel_Greenfield</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lattice_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR13389</description>
        <label>Lattice Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipLabel>Channel Greenfield</relationshipLabel>
        <relationshipName>Channel_Greenfield</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR13389.</description>
        <label>Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Lead.Record_Type__c</field>
                <operation>equals</operation>
                <value>&apos;Direct Lead 2.0&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Channel Greenfield</relationshipLabel>
        <relationshipName>Channel_Greenfield</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Created for CR13389</description>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Greenfield</relationshipLabel>
        <relationshipName>Channel_Greenfield1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_10__c</fullName>
        <description>Created for CR13389</description>
        <label>Product 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_11__c</fullName>
        <description>Created for CR13389</description>
        <label>Product 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_12__c</fullName>
        <description>Created for CR13389</description>
        <label>Product 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Created for CR13389</description>
        <formula>TEXT(Deal_ID__r.StageName)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unweighted_Rev__c</fullName>
        <description>Created for CR13389</description>
        <formula>Deal_ID__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unweighted Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Channel Greenfield</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Channel Greenfield ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Greenfield</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Lead_Is_Mandatory</fullName>
        <active>true</active>
        <description>Created for CR13389</description>
        <errorConditionFormula>ISBLANK(Lead__c)</errorConditionFormula>
        <errorDisplayField>Lead__c</errorDisplayField>
        <errorMessage>Lead is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Record_Type_Check</fullName>
        <active>true</active>
        <description>Created for CR13389</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Lead__c)), Lead__r.RecordTypeId !=  &apos;012A0000000Vnza&apos;)</errorConditionFormula>
        <errorDisplayField>Lead__c</errorDisplayField>
        <errorMessage>Only Direct Lead is allowed</errorMessage>
    </validationRules>
</CustomObject>